kubernetes/apps/rook-ceph/rook-ceph/cluster/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-skeemahs.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rook-ceph-dashboard
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://rook.housefam.casa"
    gethomepage.dev/description: Distributed storage system
    gethomepage.dev/group: Storage
    gethomepage.dev/icon: rook
    gethomepage.dev/name: Rook
    gethomepage.dev/app: ceph-mgr
spec:
  hostnames: ["rook.housefam.casa"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: rook-ceph-mgr-dashboard
          namespace: rook-ceph
          port: 7000
